# haskelldb-demo

./: .gitignore  README.md  haskelldb-demo.cabal
lib/haskelldb/: haskelldb.cabal
lib/haskelldb-hdbc/: haskelldb-hdbc.cabal
lib/haskelldb-hdbc-postgresql/: haskelldb-hdbc-postgresql.cabal
lib/haskelldb/driver-hdbc/Database/HaskellDB/: HDBC.hs
lib/haskelldb/src/Database/: HaskellDB.hs
lib/haskelldb/src/Database/HaskellDB/: Optimize.hs  PrimQuery.hs  Query.hs
lib/haskelldb/src/Database/HaskellDB/Sql/: Default.hs  PostgreSQL.hs
src/: Main.hs
src/Caturday/Model/: Fields.hs  Tables.hs
src/Caturday/Types/: Enums.hs
src/Data/: Pagination.hs
src/Data/Enum/: Print.hs
