Name: haskelldb-hdbc
Version: 2.1.0
Cabal-version: >= 1.6
Build-type: Simple
Copyright: The authors
Homepage: http://trac.haskell.org/haskelldb
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
License-file: LICENSE
Synopsis: HaskellDB support for HDBC.
Description: HaskellDB requires this driver to work with any of HDBC's drivers.
Category: Database

Library
  Build-depends: mtl == 1.1.0.0
               , haskelldb == 2.1.3
               , HDBC >= 2 && < 3
               , convertible >= 1.0.1 && < 2
               , base >= 3 && < 5
               , containers == 0.3.0.0
               , old-time == 1.0.0.5
  Extensions: ExistentialQuantification,
            OverlappingInstances,
            UndecidableInstances,
            MultiParamTypeClasses
  Exposed-Modules:
        Database.HaskellDB.HDBC
  ghc-options: -fwarn-incomplete-patterns

Source-repository head
  Type:       darcs
  Location:   http://code.haskell.org/haskelldb
